--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,14 +26,20 @@
   "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
   "rules": {
     "no-console": "off",
+    "no-param-reassign": "off",
     "default-case": "off",
     "camelcase": "off",
+    "react/jsx-curly-newline": "off",
     "@typescript-eslint/camelcase": "off",
     "react/jsx-one-expression-per-line": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off",
+    "react/jsx-wrap-multilines": ["error", {
+      "declaration": false,
+      "assignment": false
+    }],
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
